[package]
name = "tusk"
version = "0.1.0"
edition = "2024"
authors = ["Iwan Timmer <irtimmer@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
arrayref = "0.3.9"
ecdsa = { version = "0.16.9", default-features = false, features = [ "der" ] }
p256 = "0.13.2"
rand = "0.8.5"
tss-esapi = "7.6.0"
uhid-virt = "0.0.8"

[dependencies.opensk]
git = "https://github.com/google/OpenSK.git"
rev = "ec4c03d99ac7e915ff746a28fb68e8a1ffac417c"
default-features = false
features = ["software_crypto"]

[dependencies.sk-cbor]
git = "https://github.com/google/OpenSK.git"
rev = "ec4c03d99ac7e915ff746a28fb68e8a1ffac417c"
